2nd-sem/Programming/Week20-24CourseWork/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-11-openjdk/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/opt/bluej/bluejcore.jar:/opt/bluej/junit-4.12.jar:/opt/bluej/junit-jupiter-5.5.2.jar:/opt/bluej/junit-jupiter-api-5.5.2.jar:/opt/bluej/junit-jupiter-engine-5.5.2.jar:/opt/bluej/junit-jupiter-migrationsupport-5.5.2.jar:/opt/bluej/junit-jupiter-params-5.5.2.jar:/opt/bluej/junit-platform-commons-1.5.2.jar:/opt/bluej/junit-platform-console-1.5.2.jar:/opt/bluej/junit-platform-console-standalone-1.5.2.jar:/opt/bluej/junit-platform-engine-1.5.2.jar:/opt/bluej/junit-platform-launcher-1.5.2.jar:/opt/bluej/junit-platform-reporting-1.5.2.jar:/opt/bluej/junit-platform-runner-1.5.2.jar:/opt/bluej/junit-platform-suite-api-1.5.2.jar:/opt/bluej/junit-platform-testkit-1.5.2.jar:/opt/bluej/junit-quickcheck-core-0.9.jar:/opt/bluej/junit-vintage-engine-5.5.2.jar:/opt/bluej/hamcrest-core-1.3.jar:/opt/bluej/hamcrest-library-1.3.jar:/opt/bluej/lang-stride.jar:/usr/lib/jvm/java-11-openjfx/lib/javafx.base.jar:/usr/lib/jvm/java-11-openjfx/lib/javafx.controls.jar:/usr/lib/jvm/java-11-openjfx/lib/javafx.fxml.jar:/usr/lib/jvm/java-11-openjfx/lib/javafx.graphics.jar:/usr/lib/jvm/java-11-openjfx/lib/javafx.media.jar:/usr/lib/jvm/java-11-openjfx/lib/javafx.properties.jar:/usr/lib/jvm/java-11-openjfx/lib/javafx.swing.jar:/usr/lib/jvm/java-11-openjfx/lib/javafx.web.jar:/home/abhi-onfire/Downloads/Bachelors/2nd-sem/Programming/Week20-24CourseWork
-d
/home/abhi-onfire/Downloads/Bachelors/2nd-sem/Programming/Week20-24CourseWork/doc
-encoding
UTF-8
-charset
UTF-8
/home/abhi-onfire/Downloads/Bachelors/2nd-sem/Programming/Week20-24CourseWork/INGCollege.java
<---- end of javadoc command ---->
Loading source file /home/abhi-onfire/Downloads/Bachelors/2nd-sem/Programming/Week20-24CourseWork/INGCollege.java...
Constructing Javadoc information...
/home/abhi-onfire/Downloads/Bachelors/2nd-sem/Programming/Week20-24CourseWork/INGCollege.java:18: error: cannot find symbol
    public void windowDeactivated(WindowEvent e){
                                  ^
  symbol:   class WindowEvent
  location: class INGCollege
/home/abhi-onfire/Downloads/Bachelors/2nd-sem/Programming/Week20-24CourseWork/INGCollege.java:21: error: cannot find symbol
    public void windowClosing(WindowEvent e) {
                              ^
  symbol:   class WindowEvent
  location: class INGCollege
2 errors
